# Linux-Timely-Communication-Plus

./: .gitignore  CMakeLists.txt  README.md
ChatClient/: CMakeLists.txt
ChatClient/include/: ClientApp.h  NetworkManager.h
ChatClient/src/: ClientApp.cpp  NetworkManager.cpp  main.cpp
ChatServer/: CMakeLists.txt
ChatServer/include/: Control.h  Exit.h  Get_List.h  Global.h  Login.h  MyPthread.h  MysqlWrapper.h  Public.h  Register.h  Talk_group.h  Talk_one.h  TcpServer.h  View.h  wrap.h
ChatServer/src/: Control.cpp  Exit.cpp  Get_List.cpp  Login.cpp  MyPthread.cpp  MysqlWrapper.cpp  Register.cpp  Talk_group.cpp  Talk_one.cpp  TcpServer.cpp  main.cpp  wrap.cpp
